src/main/java/SafeCTwo/gen/SafeCTwoParser.java
// Generated from C:/Users/Mandrup/Documents/GitHub/ANTLR/src/main/java/SafeCTwo\SafeCTwo.g4 by ANTLR 4.9.2
package SafeCTwo.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SafeCTwoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHILESTMT=1, FORSTMT=2, IFSTMT=3, ELSE=4, SWITCHSTMT=5, CASE=6, DEFAULT=7, 
		NUMDCL=8, CHARDCL=9, STRDCL=10, BOOLDCL=11, VOIDDCL=12, RETURN=13, BREAK=14, 
		BOOLVAL=15, NUMVAL=16, CHARVAL=17, STRVAL=18, ID=19, SAFETY=20, PLUS=21, 
		MINUS=22, TIMES=23, DIVISION=24, POW=25, SQUARE=26, MOD=27, PI=28, LBRACK=29, 
		RBRACK=30, LPAR=31, RPAR=32, LBRACE=33, RBRACE=34, DOT=35, COMMA=36, COLON=37, 
		SEMI=38, SINGLEQOUTE=39, DOUBLEQOUTE=40, ASSIGN=41, LEQ=42, GEQ=43, EQ=44, 
		NEQ=45, LESS=46, GREATER=47, NOT=48, AND=49, OR=50, HASHTAG=51, DOLLAR=52, 
		WS=53, COMMENT=54;
	public static final int
		RULE_prog = 0, RULE_declaration = 1, RULE_structdcl = 2, RULE_structblock = 3, 
		RULE_dclassignsemi = 4, RULE_dclassignsemicommand = 5, RULE_safedeclaration = 6, 
		RULE_params = 7, RULE_block = 8, RULE_caseblock = 9, RULE_vdcl = 10, RULE_arraydecl = 11, 
		RULE_arrdcltype = 12, RULE_vassign = 13, RULE_vdclassign = 14, RULE_arraydclassign = 15, 
		RULE_numarraydclassign = 16, RULE_chararraydclassign = 17, RULE_stringarraydclassign = 18, 
		RULE_boolarraydclassign = 19, RULE_datatype = 20, RULE_atypes = 21, RULE_arrayassign = 22, 
		RULE_arraydata = 23, RULE_numarray = 24, RULE_chararray = 25, RULE_strarray = 26, 
		RULE_boolarray = 27, RULE_command = 28, RULE_funccalls = 29, RULE_funcdcl = 30, 
		RULE_funcblock = 31, RULE_callparams = 32, RULE_ctrlstruct = 33, RULE_iterative = 34, 
		RULE_selective = 35, RULE_iflogic = 36, RULE_forparams = 37, RULE_scase = 38, 
		RULE_defcase = 39, RULE_numdecl = 40, RULE_booldecl = 41, RULE_chardecl = 42, 
		RULE_stringdecl = 43, RULE_numdclassign = 44, RULE_chardclassign = 45, 
		RULE_stringdclassign = 46, RULE_booldclassign = 47, RULE_bexpr = 48, RULE_bterm = 49, 
		RULE_bpart = 50, RULE_bpiece = 51, RULE_blast = 52, RULE_aexpr = 53, RULE_term = 54, 
		RULE_part = 55, RULE_partbool = 56, RULE_bop = 57, RULE_vals = 58, RULE_numberval = 59, 
		RULE_relop = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "declaration", "structdcl", "structblock", "dclassignsemi", "dclassignsemicommand", 
			"safedeclaration", "params", "block", "caseblock", "vdcl", "arraydecl", 
			"arrdcltype", "vassign", "vdclassign", "arraydclassign", "numarraydclassign", 
			"chararraydclassign", "stringarraydclassign", "boolarraydclassign", "datatype", 
			"atypes", "arrayassign", "arraydata", "numarray", "chararray", "strarray", 
			"boolarray", "command", "funccalls", "funcdcl", "funcblock", "callparams", 
			"ctrlstruct", "iterative", "selective", "iflogic", "forparams", "scase", 
			"defcase", "numdecl", "booldecl", "chardecl", "stringdecl", "numdclassign", 
			"chardclassign", "stringdclassign", "booldclassign", "bexpr", "bterm", 
			"bpart", "bpiece", "blast", "aexpr", "term", "part", "partbool", "bop", 
			"vals", "numberval", "relop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'while'", "'for'", "'if'", "'else'", "'switch'", "'case'", "'default'", 
			"'number'", "'char'", "'string'", "'boolean'", "'void'", "'return'", 
			null, null, null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", 
			"'pow'", "'sqrt'", "'%'", "'PI'", "'['", "']'", "'('", "')'", "'{'", 
			"'}'", "'.'", "','", "':'", "';'", "'''", "'\"'", "'='", "'<='", "'>='", 
			"'=='", "'!='", "'<'", "'>'", "'!'", "'&&'", "'||'", "'#'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHILESTMT", "FORSTMT", "IFSTMT", "ELSE", "SWITCHSTMT", "CASE", 
			"DEFAULT", "NUMDCL", "CHARDCL", "STRDCL", "BOOLDCL", "VOIDDCL", "RETURN", 
			"BREAK", "BOOLVAL", "NUMVAL", "CHARVAL", "STRVAL", "ID", "SAFETY", "PLUS", 
			"MINUS", "TIMES", "DIVISION", "POW", "SQUARE", "MOD", "PI", "LBRACK", 
			"RBRACK", "LPAR", "RPAR", "LBRACE", "RBRACE", "DOT", "COMMA", "COLON", 
			"SEMI", "SINGLEQOUTE", "DOUBLEQOUTE", "ASSIGN", "LEQ", "GEQ", "EQ", "NEQ", 
			"LESS", "GREATER", "NOT", "AND", "OR", "HASHTAG", "DOLLAR", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SafeCTwo.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SafeCTwoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationNodeContext extends ProgContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public DeclarationNodeContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).enterDeclarationNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).exitDeclarationNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SafeCTwoVisitor ) return ((SafeCTwoVisitor<? extends T>)visitor).visitDeclarationNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			_localctx = new DeclarationNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMDCL) | (1L << CHARDCL) | (1L << STRDCL) | (1L << BOOLDCL) | (1L << VOIDDCL) | (1L << ID) | (1L << SAFETY) | (1L << DOLLAR))) != 0)) {
				{
				{
				setState(122);
				declaration();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StructDclNodeContext extends DeclarationContext {
		public StructdclContext structdcl() {
			return getRuleContext(StructdclContext.class,0);
		}
		public StructDclNodeContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).enterStructDclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).exitStructDclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SafeCTwoVisitor ) return ((SafeCTwoVisitor<? extends T>)visitor).visitStructDclNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DclAssignSemiNodeContext extends DeclarationContext {
		public DclassignsemiContext dclassignsemi() {
			return getRuleContext(DclassignsemiContext.class,0);
		}
		public DclAssignSemiNodeContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).enterDclAssignSemiNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).exitDclAssignSemiNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SafeCTwoVisitor ) return ((SafeCTwoVisitor<? extends T>)visitor).visitDclAssignSemiNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncDclNodeContext extends DeclarationContext {
		public FuncdclContext funcdcl() {
			return getRuleContext(FuncdclContext.class,0);
		}
		public FuncDclNodeContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).enterFuncDclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).exitFuncDclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SafeCTwoVisitor ) return ((SafeCTwoVisitor<? extends T>)visitor).visitFuncDclNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case SAFETY:
				_localctx = new DclAssignSemiNodeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				dclassignsemi();
				}
				break;
			case DOLLAR:
				_localctx = new StructDclNodeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				structdcl();
				}
				break;
			case NUMDCL:
			case CHARDCL:
			case STRDCL:
			case BOOLDCL:
			case VOIDDCL:
				_localctx = new FuncDclNodeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				funcdcl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructdclContext extends ParserRuleContext {
		public StructdclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structdcl; }
	 
		public StructdclContext() { }
		public void copyFrom(StructdclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StructDclBlockNodeContext extends StructdclContext {
		public TerminalNode DOLLAR() { return getToken(SafeCTwoParser.DOLLAR, 0); }
		public TerminalNode ID() { return getToken(SafeCTwoParser.ID, 0); }
		public StructblockContext structblock() {
			return getRuleContext(StructblockContext.class,0);
		}
		public StructDclBlockNodeContext(StructdclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).enterStructDclBlockNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).exitStructDclBlockNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SafeCTwoVisitor ) return ((SafeCTwoVisitor<? extends T>)visitor).visitStructDclBlockNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructdclContext structdcl() throws RecognitionException {
		StructdclContext _localctx = new StructdclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_structdcl);
		try {
			_localctx = new StructDclBlockNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(DOLLAR);
			setState(134);
			match(ID);
			setState(135);
			structblock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructblockContext extends ParserRuleContext {
		public StructblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structblock; }
	 
		public StructblockContext() { }
		public void copyFrom(StructblockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StructBlockNodeContext extends StructblockContext {
		public TerminalNode LBRACE() { return getToken(SafeCTwoParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(SafeCTwoParser.RBRACE, 0); }
		public List<SafedeclarationContext> safedeclaration() {
			return getRuleContexts(SafedeclarationContext.class);
		}
		public SafedeclarationContext safedeclaration(int i) {
			return getRuleContext(SafedeclarationContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(SafeCTwoParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(SafeCTwoParser.SEMI, i);
		}
		public StructBlockNodeContext(StructblockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).enterStructBlockNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).exitStructBlockNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SafeCTwoVisitor ) return ((SafeCTwoVisitor<? extends T>)visitor).visitStructBlockNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructblockContext structblock() throws RecognitionException {
		StructblockContext _localctx = new StructblockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_structblock);
		int _la;
		try {
			_localctx = new StructBlockNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(LBRACE);
			setState(141); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(138);
				safedeclaration();
				setState(139);
				match(SEMI);
				}
				}
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SAFETY );
			setState(145);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclassignsemiContext extends ParserRuleContext {
		public DclassignsemiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclassignsemi; }
	 
		public DclassignsemiContext() { }
		public void copyFrom(DclassignsemiContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SafeDeclVAssignNodeContext extends DclassignsemiContext {
		public TerminalNode SEMI() { return getToken(SafeCTwoParser.SEMI, 0); }
		public SafedeclarationContext safedeclaration() {
			return getRuleContext(SafedeclarationContext.class,0);
		}
		public VassignContext vassign() {
			return getRuleContext(VassignContext.class,0);
		}
		public SafeDeclVAssignNodeContext(DclassignsemiContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).enterSafeDeclVAssignNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).exitSafeDeclVAssignNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SafeCTwoVisitor ) return ((SafeCTwoVisitor<? extends T>)visitor).visitSafeDeclVAssignNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclassignsemiContext dclassignsemi() throws RecognitionException {
		DclassignsemiContext _localctx = new DclassignsemiContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dclassignsemi);
		try {
			_localctx = new SafeDeclVAssignNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SAFETY:
				{
				setState(147);
				safedeclaration();
				}
				break;
			case ID:
				{
				setState(148);
				vassign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(151);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclassignsemicommandContext extends ParserRuleContext {
		public DclassignsemicommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclassignsemicommand; }
	 
		public DclassignsemicommandContext() { }
		public void copyFrom(DclassignsemicommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DclAssignSemiCommandNodeContext extends DclassignsemicommandContext {
		public List<DclassignsemiContext> dclassignsemi() {
			return getRuleContexts(DclassignsemiContext.class);
		}
		public DclassignsemiContext dclassignsemi(int i) {
			return getRuleContext(DclassignsemiContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public DclAssignSemiCommandNodeContext(DclassignsemicommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).enterDclAssignSemiCommandNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).exitDclAssignSemiCommandNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SafeCTwoVisitor ) return ((SafeCTwoVisitor<? extends T>)visitor).visitDclAssignSemiCommandNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclassignsemicommandContext dclassignsemicommand() throws RecognitionException {
		DclassignsemicommandContext _localctx = new DclassignsemicommandContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dclassignsemicommand);
		int _la;
		try {
			_localctx = new DclAssignSemiCommandNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILESTMT) | (1L << FORSTMT) | (1L << IFSTMT) | (1L << SWITCHSTMT) | (1L << ID) | (1L << SAFETY))) != 0)) {
				{
				setState(155);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(153);
					dclassignsemi();
					}
					break;
				case 2:
					{
					setState(154);
					command();
					}
					break;
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SafedeclarationContext extends ParserRuleContext {
		public SafedeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_safedeclaration; }
	 
		public SafedeclarationContext() { }
		public void copyFrom(SafedeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SafeDeclNodeContext extends SafedeclarationContext {
		public TerminalNode SAFETY() { return getToken(SafeCTwoParser.SAFETY, 0); }
		public VdclContext vdcl() {
			return getRuleContext(VdclContext.class,0);
		}
		public VdclassignContext vdclassign() {
			return getRuleContext(VdclassignContext.class,0);
		}
		public SafeDeclNodeContext(SafedeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).enterSafeDeclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafeCTwoListener ) ((SafeCTwoListener)listener).exitSafeDeclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SafeCTwoVisitor ) return ((SafeCTwoVisitor<? extends T>)visitor).visitSafeDeclNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SafedeclarationContext safedeclaration() throws RecognitionException {
		SafedeclarationContext _localctx = new SafedeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_safedeclaration);
		try {
			_localctx = new SafeDeclNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(SAFETY);
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(161);
				vdcl();
				}
				break;
			case 2:
				{
				setState(162);
				vdclassign();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
